crates/syntax/tests/snapshots/parser__parser_array list units.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(input).map(|doc| doc.ast)
---
Ok(
    Source {
        span: 0..13,
        statements: StatementList {
            span: 0..13,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [
                (
                    LocalAssignment(
                        LocalAssignment {
                            span: 0..12,
                            extras: ItemExtras {
                                leading: LeadingExtras(
                                    [],
                                ),
                                trailing: TrailingExtras(
                                    [],
                                ),
                            },
                            attributes: [],
                            name: Identifier {
                                span: 0..1,
                                name: "a",
                            },
                            ty: None,
                            value: ArrayList(
                                ArrayListExpression {
                                    span: 4..12,
                                    extras: ItemExtras {
                                        leading: LeadingExtras(
                                            [],
                                        ),
                                        trailing: TrailingExtras(
                                            [],
                                        ),
                                    },
                                    items: [
                                        ArrayItem {
                                            span: 5..6,
                                            extras: ItemExtras {
                                                leading: LeadingExtras(
                                                    [],
                                                ),
                                                trailing: TrailingExtras(
                                                    [],
                                                ),
                                            },
                                            expression: Literal(
                                                Literal {
                                                    span: 5..6,
                                                    extras: ItemExtras {
                                                        leading: LeadingExtras(
                                                            [],
                                                        ),
                                                        trailing: TrailingExtras(
                                                            [],
                                                        ),
                                                    },
                                                    literal: Integer(
                                                        IntegerLiteral {
                                                            span: 5..6,
                                                            value: 1,
                                                            raw: "1",
                                                        },
                                                    ),
                                                },
                                            ),
                                        },
                                        ArrayItem {
                                            span: 8..9,
                                            extras: ItemExtras {
                                                leading: LeadingExtras(
                                                    [],
                                                ),
                                                trailing: TrailingExtras(
                                                    [],
                                                ),
                                            },
                                            expression: Literal(
                                                Literal {
                                                    span: 8..9,
                                                    extras: ItemExtras {
                                                        leading: LeadingExtras(
                                                            [],
                                                        ),
                                                        trailing: TrailingExtras(
                                                            [],
                                                        ),
                                                    },
                                                    literal: Integer(
                                                        IntegerLiteral {
                                                            span: 8..9,
                                                            value: 2,
                                                            raw: "2",
                                                        },
                                                    ),
                                                },
                                            ),
                                        },
                                    ],
                                    ty: Some(
                                        SingleType {
                                            span: 10..12,
                                            name: "mm",
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    TrailingExtras(
                        [],
                    ),
                ),
            ],
            tail: None,
        },
    },
)
