crates/syntax/tests/snapshots/parser__parser_array list.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(input).map(|doc| doc.ast)
---
Ok(
    Source {
        span: 0..9,
        statements: StatementList {
            span: 0..9,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [],
            tail: Some(
                Expression(
                    ExpressionStatement {
                        span: 0..9,
                        extras: ItemExtras {
                            leading: LeadingExtras(
                                [],
                            ),
                            trailing: TrailingExtras(
                                [],
                            ),
                        },
                        attributes: [],
                        expression: ArrayList(
                            ArrayListExpression {
                                span: 0..9,
                                extras: ItemExtras {
                                    leading: LeadingExtras(
                                        [],
                                    ),
                                    trailing: TrailingExtras(
                                        [],
                                    ),
                                },
                                items: [
                                    ArrayItem {
                                        span: 1..2,
                                        extras: ItemExtras {
                                            leading: LeadingExtras(
                                                [],
                                            ),
                                            trailing: TrailingExtras(
                                                [],
                                            ),
                                        },
                                        expression: Literal(
                                            Literal {
                                                span: 1..2,
                                                extras: ItemExtras {
                                                    leading: LeadingExtras(
                                                        [],
                                                    ),
                                                    trailing: TrailingExtras(
                                                        [],
                                                    ),
                                                },
                                                literal: Integer(
                                                    IntegerLiteral {
                                                        span: 1..2,
                                                        value: 1,
                                                        raw: "1",
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                    ArrayItem {
                                        span: 3..4,
                                        extras: ItemExtras {
                                            leading: LeadingExtras(
                                                [],
                                            ),
                                            trailing: TrailingExtras(
                                                [],
                                            ),
                                        },
                                        expression: Literal(
                                            Literal {
                                                span: 3..4,
                                                extras: ItemExtras {
                                                    leading: LeadingExtras(
                                                        [],
                                                    ),
                                                    trailing: TrailingExtras(
                                                        [],
                                                    ),
                                                },
                                                literal: Integer(
                                                    IntegerLiteral {
                                                        span: 3..4,
                                                        value: 2,
                                                        raw: "2",
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                    ArrayItem {
                                        span: 5..6,
                                        extras: ItemExtras {
                                            leading: LeadingExtras(
                                                [],
                                            ),
                                            trailing: TrailingExtras(
                                                [],
                                            ),
                                        },
                                        expression: Literal(
                                            Literal {
                                                span: 5..6,
                                                extras: ItemExtras {
                                                    leading: LeadingExtras(
                                                        [],
                                                    ),
                                                    trailing: TrailingExtras(
                                                        [],
                                                    ),
                                                },
                                                literal: Integer(
                                                    IntegerLiteral {
                                                        span: 5..6,
                                                        value: 3,
                                                        raw: "3",
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                    ArrayItem {
                                        span: 7..8,
                                        extras: ItemExtras {
                                            leading: LeadingExtras(
                                                [],
                                            ),
                                            trailing: TrailingExtras(
                                                [],
                                            ),
                                        },
                                        expression: Literal(
                                            Literal {
                                                span: 7..8,
                                                extras: ItemExtras {
                                                    leading: LeadingExtras(
                                                        [],
                                                    ),
                                                    trailing: TrailingExtras(
                                                        [],
                                                    ),
                                                },
                                                literal: Integer(
                                                    IntegerLiteral {
                                                        span: 7..8,
                                                        value: 4,
                                                        raw: "4",
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ],
                                ty: None,
                            },
                        ),
                    },
                ),
            ),
        },
    },
)
