crates/syntax/tests/snapshots/parser__parser_array range.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..7,
        statements: StatementList {
            span: 0..7,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [],
            tail: Some(
                Expression(
                    ExpressionStatement {
                        span: 0..7,
                        extras: ItemExtras {
                            leading: LeadingExtras(
                                [],
                            ),
                            trailing: TrailingExtras(
                                [],
                            ),
                        },
                        attributes: [],
                        expression: ArrayRange(
                            ArrayRangeExpression {
                                span: 0..7,
                                extras: ItemExtras {
                                    leading: LeadingExtras(
                                        [],
                                    ),
                                    trailing: TrailingExtras(
                                        [],
                                    ),
                                },
                                start: ArrayItem {
                                    span: 1..2,
                                    extras: ItemExtras {
                                        leading: LeadingExtras(
                                            [],
                                        ),
                                        trailing: TrailingExtras(
                                            [],
                                        ),
                                    },
                                    expression: Literal(
                                        Literal {
                                            span: 1..2,
                                            extras: ItemExtras {
                                                leading: LeadingExtras(
                                                    [],
                                                ),
                                                trailing: TrailingExtras(
                                                    [],
                                                ),
                                            },
                                            literal: Integer(
                                                IntegerLiteral {
                                                    span: 1..2,
                                                    value: 1,
                                                    raw: "1",
                                                },
                                            ),
                                        },
                                    ),
                                },
                                end: ArrayItem {
                                    span: 4..6,
                                    extras: ItemExtras {
                                        leading: LeadingExtras(
                                            [],
                                        ),
                                        trailing: TrailingExtras(
                                            [],
                                        ),
                                    },
                                    expression: Literal(
                                        Literal {
                                            span: 4..6,
                                            extras: ItemExtras {
                                                leading: LeadingExtras(
                                                    [],
                                                ),
                                                trailing: TrailingExtras(
                                                    [],
                                                ),
                                            },
                                            literal: Integer(
                                                IntegerLiteral {
                                                    span: 4..6,
                                                    value: 10,
                                                    raw: "10",
                                                },
                                            ),
                                        },
                                    ),
                                },
                                ty: None,
                            },
                        ),
                    },
                ),
            ),
        },
    },
)
