crates/syntax/tests/snapshots/parser__parser_assignment.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(input).map(|doc| doc.ast)
---
Ok(
    Source {
        span: 0..10,
        statements: StatementList {
            span: 0..10,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [
                (
                    LocalAssignment(
                        LocalAssignment {
                            span: 0..9,
                            extras: ItemExtras {
                                leading: LeadingExtras(
                                    [],
                                ),
                                trailing: TrailingExtras(
                                    [],
                                ),
                            },
                            attributes: [],
                            name: Identifier {
                                span: 0..1,
                                name: "a",
                            },
                            ty: None,
                            value: BinaryOperation(
                                BinaryOperation {
                                    span: 4..9,
                                    lhs: QualifiedName(
                                        QualifiedName {
                                            span: 4..5,
                                            extras: ItemExtras {
                                                leading: LeadingExtras(
                                                    [],
                                                ),
                                                trailing: TrailingExtras(
                                                    [
                                                        Whitespace(
                                                            " ",
                                                        ),
                                                    ],
                                                ),
                                            },
                                            parts: [
                                                Identifier {
                                                    span: 4..5,
                                                    name: "b",
                                                },
                                            ],
                                        },
                                    ),
                                    operation: BinaryOperator {
                                        span: 6..7,
                                        operation: Multiply,
                                    },
                                    rhs: Literal(
                                        Literal {
                                            span: 8..9,
                                            extras: ItemExtras {
                                                leading: LeadingExtras(
                                                    [],
                                                ),
                                                trailing: TrailingExtras(
                                                    [],
                                                ),
                                            },
                                            literal: Integer(
                                                IntegerLiteral {
                                                    span: 8..9,
                                                    value: 2,
                                                    raw: "2",
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    TrailingExtras(
                        [],
                    ),
                ),
            ],
            tail: None,
        },
    },
)
