crates/syntax/tests/snapshots/parser__parser_attribute access.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..7,
        statements: StatementList {
            span: 0..7,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [],
            tail: Some(
                Expression(
                    ExpressionStatement {
                        span: 0..7,
                        extras: ItemExtras {
                            leading: LeadingExtras(
                                [],
                            ),
                            trailing: TrailingExtras(
                                [],
                            ),
                        },
                        attributes: [],
                        expression: ElementAccess(
                            ElementAccess {
                                span: 0..7,
                                value: QualifiedName(
                                    QualifiedName {
                                        span: 0..3,
                                        extras: ItemExtras {
                                            leading: LeadingExtras(
                                                [],
                                            ),
                                            trailing: TrailingExtras(
                                                [],
                                            ),
                                        },
                                        parts: [
                                            Identifier {
                                                span: 0..3,
                                                name: "foo",
                                            },
                                        ],
                                    },
                                ),
                                element_chain: [
                                    Element {
                                        span: 3..7,
                                        extras: ItemExtras {
                                            leading: LeadingExtras(
                                                [],
                                            ),
                                            trailing: TrailingExtras(
                                                [],
                                            ),
                                        },
                                        inner: Attribute(
                                            Identifier {
                                                span: 4..7,
                                                name: "bar",
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                ),
            ),
        },
    },
)
